<resources>
    <string name="app_name">FurnitureStore</string>
    <string name="slogan">slogan</string>
    <string name="search">Search</string>

    <string name="privacy">
        This Privacy Policy ("Privacy Policy") is designed to help you understand
        how Wayfair LLC and its affiliated brands, including Wayfair.com, Joss and Main,
        DwellStudio, AllModern, Birch Lane and Wayfair Supply ( "Wayfair", "we" or "us" )
        collects and processes the information that you share when you use this and any
        of our websites (together, the "Site") and our mobile application (the "App,"
        and together with the Site, the "Service").\n
        Before submitting information to the Service, please review this Privacy Policy
        carefully. By using or accessing the Service, you accept the practices described
        in this Privacy Policy. If you prefer that we not collect and process information
        about you, please do not provide it to us and do not access the Service.\n
        We do not knowingly collect any Personal Information from children under 13 without
        prior verifiable parental consent. If Wayfair learns that a child under the age of
        13 has submitted Personal Information (defined below) online without parental consent,
        we will take all reasonable measures to delete the information as soon as possible and
        to not use such information for any purpose, except where necessary to protect the safety
        of the child or others as required or allowed by law. If you believe a child under 13 has
        provided us with Personal Information, please contact us here.

    </string>


    <string name="info">
        Personal Information You Share With Us: "Personal Information" is information that can
        personally identify you, such as your name, email address and telephone number. We maintain
        one or more databases to store your Personal Information and may retain it as reasonably
        required to serve you and operate the Service. Personal Information that we collect depends
        on how you use the Service. Providing your Personal Information to us is your choice. If you
        choose not to provide us with certain Personal Information, you may not be able to take
        advantage of certain features of the Service; and\n
        Information We Collect Automatically: When you visit the Service, we may automatically collect
        identifier and other technical information, such as your browser information, operating system
        information, device information, TCP-IP address and the date, time, length of stay and specific
        pages accessed during your visits to the Service (“Online Information”).
    </string>

    <string name="services">
        If you register to use the Service, we may collect Personal Information including your name,
        email address, and telephone number.\n

        You may also register for the Service using another service, such as Facebook. If you create
        your Wayfair account by connecting through another service, you are authorizing us to use public
        information from that connected account to help complete your Wayfair profile. Please remember
        that the manner in which the service uses, stores, and discloses your information is governed
        solely by the policies of such service. We recommend that you review the terms and policies of
        that service, including its privacy and data gathering practices. Wayfair shall have no liability
        or responsibility for the privacy practices or other actions of any third party service provider
        or any other third-party site or service that may be enabled within the Service.\n

        You may review, update, or modify your account information, including profile and contact information, at any time by logging into your Wayfair account. You may also permanently delete your account by contacting us here.
    </string>


    <string name="use_of_service">
        If you use the Service through your mobile device, we may collect your geo-location information to
        assist us in fulfilling your order. We will not share this information with third parties and will
        only use this information for the sole purpose of fulfilling your order. You may at any time prevent
        the Service from using your location by turning this option off at the device level.\n

        When you use the Service through your mobile device, we also collect device type and UUID,
        a unique identifier generated within the App, and store this information in log files.
        We use this information to provide you with the most up to date application and features,
        or to advertise or promote products or services to you that are applicable to your device type
    </string>

    <string name="personalinformation">
    Except as specified in this Privacy Policy, Wayfair does not rent, sell, trade or disclose your Personal
        Information to third parties without your prior consent. Wayfair may, however, use, process and
        disclose Personal Information to:\n

    send information to customers about orders;\n
    fulfill your orders;\n
    process and collect your payments;\n
    administer "Wayfair Rewards" and other customer loyalty programs;\n
    send you promotional marketing material about Wayfair’s company and partners;\n
    produce content for our activity feed feature;\n
    customize, analyze, adjust and improve the Service to better meet your needs;\n
    execute a sweepstakes, contest or other promotion;\n
    enforce Wayfair’s agreements with you;\n
    provide you with important administrative information regarding the Service, such as changes to this Privacy Policy and our Terms of Use, rewards and loyalty programs and other policies;
    prevent fraud and other prohibited or illegal activities; and\n
    comply with potential requests of law enforcement or data protection agencies.\n
    When possible, Online Information may be combined and/or linked to other Personal Information that you provided to us, in accordance with the purposes specified above.

We may use your deidentified Personal Information and Online Information to prepare anonymized,
        aggregated data about our users ("Anonymized Data"). We may provide third parties with Anonymized
        Data in describing the Service to prospective partners, advertisers and other third parties, and
        for all other lawful purposes. As communicated to third parties, the Anonymized Data does not
        include any information permitting the recipient to identify, locate or contact you.

    </string>

    <string name="informationsecurity">
      We have instituted reasonable safeguards to help ensure that information collected is secure. We also
        take reasonable steps to ensure that third parties who work with us to make the Site (including the
        software, applications and services provided on the Site) available to you agree to protect personal
        information that they must access in order to serve you and to honor your preferences about contacts
        you receive.\n

        When you send or otherwise transmit your sensitive information (such as your credit card number) to or
        though the Sites, your sensitive information is encrypted and protected with SSL, the current
        industry-standard encryption protocol. When you are on an SSL-protected page, a picture of a closed
        lock appears at the bottom or top of some web browsers. Another way to tell if you are on a secure page
        is to check the URL or address of the page. (Look in the address box or right-click on the page and
        select "Properties".)These secure SSL-encrypted pages have URLs that start with "https://" instead
        of "http://".\n

        Please understand, however, that it is possible for third parties to access information despite our
        efforts. Without limiting the terms of our Terms of Use and this Privacy Policy, you understand that
        we do not guarantee that your use of the Site and/or information provided by you will be private or
        secure and we are not responsible or liable to you for any lack of privacy or security you may
        experience. You are fully responsible for taking precautions and providing security measures best
        suited for your situation and intended use of the Site. You also understand that any information
        provided by you or collected by us or our agents in connection with your use of the Site will be
        used in the manner described in our Terms of Use. Please do not use the Site if you do not agree
        to the terms and conditions described in this Information Security section.

    </string>

<string name="fb_ShoppingBasket">Floating Button</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>

</resources>
